# better-cloudflare-ip

./: CloudFlare.py  Dockerfile  README.md  cf.sh  main.go  自动优选CF节点(带参数版).bat
.github/workflows/: docker_buildx.yml
batch/: CF优选IP-ANSI.bat  CF优选IP-UTF-8.bat  CF优选IP-UTF8.bat  CF优选IP.bat  RTT.bat
linux/: CHANGELOG.md  COPYING  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
linux/doc/: CHANGELOG.pre-v4  Makefile.am  Makefile.in  README.1992  fping.8  fping.pod
linux/src/: Makefile.am  Makefile.in  cf.sh  fping.c  fping.h  ipSpeedTest.sh  options.h  optparse.c  optparse.h  seqmap.c  seqmap.h  socket4.c  socket6.c
shell/: cf-openwrt.sh  cf.sh  speedtest.sh
windows/: CF优选IP.bat  Colo提取.bat  单IP测速.bat
